--- a/clover/src/app/components/flights/flights.component.html
+++ b/clover/src/app/components/flights/flights.component.html
@@ -1,303 +1,156 @@
-<!--
-	Author: W3layouts
-	Author URL: http://w3layouts.com
-	License: Creative Commons Attribution 3.0 Unported
-	License URL: http://creativecommons.org/licenses/by/3.0/
--->
-
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Flight Ticket Booking a Flat Responsive Widget Template :: w3layouts</title>
-	<link href='//fonts.googleapis.com/css?family=Open+Sans:400,300italic,300,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
-	<link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="Flight Ticket Booking  Widget Responsive, Login Form Web Template, Flat Pricing Tables, Flat Drop-Downs, Sign-Up Web Templates, Flat Web Templates, Login Sign-up Responsive Web Template, Smartphone Compatible Web Template, Free Web Designs for Nokia, Samsung, LG, Sony Ericsson, Motorola Web Design" />
-	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-		
-</head>
-<body >
+<body>
 	<div class="bg">
-	<h1>Flight Ticket Booking</h1>
-	<div class="main-agileinfo">
-		<div class="sap_tabs">			
-			<div id="horizontalTab">
-				<ul class="resp-tabs-list">
-					<li class="resp-tab-item"><span>Round Trip</span></li>
-					<li class="resp-tab-item"><span>One way</span></li>
-					<li class="resp-tab-item"><span>Multi city</span></li>				
-        </ul>	
-        
-				<div class="clearfix"> </div>	
-				<div class="resp-tabs-container">
-					<div >
-						<form action="#" method="post">
-							<div class="from">
-								<h3>From</h3>
-								<input type="text" name="city" class="city1" placeholder="Type Departure City" required="">
-							</div>
-							<div class="to">
-								<h3>To</h3>
-								<input type="text" name="city" class="city2" placeholder="Type Destination City" required="">
-							</div>
-							<div class="clear"></div>
-							<div class="date">
-								<div class="depart">
-									<h3>Depart</h3>
-									<input  id="datepicker" name="Text" type="text" value="mm/dd/yyyy" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'mm/dd/yyyy';}" required="">
-									<span class="checkbox1">
-										<label class="checkbox"><input type="checkbox" name="" checked=""><i> </i>Flexible with date</label>
-									</span>
-								</div>
-								<div class="return">
-									<h3>Return</h3>
-									<input  id="datepicker1" name="Text" type="text" value="mm/dd/yyyy" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'mm/dd/yyyy';}" required="">
-									<span class="checkbox1">
-										<label class="checkbox"><input type="checkbox" name="" checked=""><i> </i>Flexible with date</label>
-									</span>
-								</div>
-								<div class="clear"></div>
-							</div>
-							<div class="class">
-								<h3>Class</h3>
-								<select id="w3_country1" onchange="change_country(this.value)" class="frm-field required">
-									<option value="null">Economy</option>  
-									<option value="null">Premium Economy</option>   
-									<option value="null">Business</option>   
-									<option value="null">First class</option>   						
-								</select>
-
-							</div>
-							<div class="clear"></div>
-							<div class="numofppl">
-								<div class="adults">
-									<h3>Adult:(12+ yrs)</h3>
-									<div class="quantity"> 
-										<div class="quantity-select">                           
-											<div class="entry value-minus">&nbsp;</div>
-											<div class="entry value"><span>1</span></div>
-											<div class="entry value-plus active">&nbsp;</div>
-										</div>
-									</div>
-								</div>
-								<div class="child">
-									<h3>Child:(2-11 yrs)</h3>
-									<div class="quantity"> 
-										<div class="quantity-select">                           
-											<div class="entry value-minus">&nbsp;</div>
-											<div class="entry value"><span>1</span></div>
-											<div class="entry value-plus active">&nbsp;</div>
-										</div>
-									</div>
-								</div>
-								<div class="clear"></div>
-							</div>
-							<div class="clear"></div>
-							<input type="submit" value="Search Flights">
-						</form>						
-					</div>		
-					<div class="tab-1 resp-tab-content oneway">
-						<form action="#" method="post">
-							<div class="from">
-								<h3>From</h3>
-								<input type="text" name="city" class="city1" placeholder="Type Departure City" required="">
-							</div>
-							<div class="to">
-								<h3>To</h3>
-								<input type="text" name="city" class="city2" placeholder="Type Destination City" required="">
-							</div>
-							<div class="clear"></div>
-							<div class="date">
-								<div class="depart">
-									<h3>Depart</h3>
-									<input class="date" id="datepicker2" name="Text" type="text" value="mm/dd/yyyy" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'mm/dd/yyyy';}" required="">
-									<span class="checkbox1">
-										<label class="checkbox"><input type="checkbox" name="" checked=""><i> </i>Flexible with date</label>
-									</span>
-								</div>
-							</div>
-							<div class="class">
-								<h3>Class</h3>
-								<select id="w3_country1" onchange="change_country(this.value)" class="frm-field required">
-									<option value="null">Economy</option>  
-									<option value="null">Premium Economy</option>   
-									<option value="null">Business</option>   
-									<option value="null">First class</option>   						
-								</select>
-
-							</div>
-							<div class="clear"></div>
-							<div class="numofppl">
-								<div class="adults">
-									<h3>Adult:(12+ yrs)</h3>
-									<div class="quantity"> 
-										<div class="quantity-select">                           
-											<div class="entry value-minus">&nbsp;</div>
-											<div class="entry value"><span>1</span></div>
-											<div class="entry value-plus active">&nbsp;</div>
-										</div>
-									</div>
-								</div>
-								<div class="child">
-									<h3>Child:(2-11 yrs)</h3>
-									<div class="quantity"> 
-										<div class="quantity-select">                           
-											<div class="entry value-minus">&nbsp;</div>
-											<div class="entry value"><span>1</span></div>
-											<div class="entry value-plus active">&nbsp;</div>
-										</div>
-									</div>
-								</div>
-								<div class="clear"></div>
-							</div>
-							<div class="clear"></div>
-							<input type="submit" value="Search Flights">
-						</form>	
-								
-					</div>
-					<div class="tab-1 resp-tab-content multicity">
-						
-									<form action="#" method="post">
-										<div class="from">
-											<h3>From</h3>
-											<input type="text" name="city" class="city1" placeholder="Type Departure City" required="">
-										</div>
-										<div class="to">
-											<h3>To</h3>
-											<input type="text" name="city" class="city2" placeholder="Type Destination City" required="">
-										</div>
-										<div class="clear"></div>
-										<div class="date">
-											<div class="depart">
-												<h3>Depart</h3>
-												<input class="date" id="datepicker3" name="Text" type="text" value="mm/dd/yyyy" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'mm/dd/yyyy';}" required="">
-												<span class="checkbox1">
-													<label class="checkbox"><input type="checkbox" name="" checked=""><i> </i>Flexible with date</label>
-												</span>
-											</div>
-										</div>
-										<div class="class">
-											<h3>Class</h3>
-											<select id="w3_country1" onchange="change_country(this.value)" class="frm-field required">
-												<option value="null">Economy</option>  
-												<option value="null">Premium Economy</option>   
-												<option value="null">Business</option>   
-												<option value="null">First class</option>   						
-											</select>
-										</div>
-										<div class="clear"></div>
-										<div id="loadMore">Add City+</div>
-										<div id="showLess">Remove</div>
-									</form>
-				<div class="load_more">	
-						<ul id="myList">
-							<li>
-			
-								<div class="l_g spcl">
-									<form action="#" method="post" class="blackbg">
-										<div class="from">
-											<h3>From</h3>
-											<input type="text" name="city" class="city1" placeholder="Type Departure City" required="">
-										</div>
-										<div class="to">
-											<h3>To</h3>
-											<input type="text" name="city" class="city2" placeholder="Type Destination City" required="">
-										</div>
-										<div class="clear"></div>
-										<div class="date">
-											<div class="depart">
-												<h3>Depart</h3>
-												<input class="date" id="datepicker" name="Text" type="text" value="mm/dd/yyyy" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'mm/dd/yyyy';}" required="">
-												<span class="checkbox1">
-													<label class="checkbox"><input type="checkbox" name="" checked=""><i> </i>Flexible with date</label>
-												</span>
-											</div>
-										</div>
-										<div class="clear"></div>
-									</form>
-					
-								</div>
-								
-							</li>
-							<form action="#" method="post">
-							<div class="numofppl">
-								<div class="adults">
-									<h3>Adult:(12+ yrs)</h3>
-									<div class="quantity"> 
-										<div class="quantity-select">                           
-											<div class="entry value-minus">&nbsp;</div>
-											<div class="entry value"><span>1</span></div>
-											<div class="entry value-plus active">&nbsp;</div>
-										</div>
-									</div>
-								</div>
-								<div class="child">
-									<h3>Child:(2-11 yrs)</h3>
-									<div class="quantity"> 
-										<div class="quantity-select">                           
-											<div class="entry value-minus">&nbsp;</div>
-											<div class="entry value"><span>1</span></div>
-											<div class="entry value-plus active">&nbsp;</div>
-										</div>
-									</div>
-								</div>
-								<div class="clear"></div>
-							</div>
-							<div class="clear"></div>
-							<input type="submit" value="Search Flights">
-							</form>
-						</ul>
-					</div>
-					</div>
-		
-				</div>						
-			</div>
-		</div>
-	</div>
-	
-
-
-
-</div>
-    <div class="conteiner">
-			<section class="ftco-section ftco-services">
+			<div id="booking" class="section">
+			<div class="section-center">
 					<div class="container">
 						<div class="row">
-					  <div class="col-md-4 d-flex services align-self-stretch px-4 ftco-animate">
-						<div class="d-block services-wrap text-center">
-						  <div class="img" style="background-image: url(images/services-1.jpg);"></div>
-						  <div class="media-body py-4 px-3">
-							<h3 class="heading">Map Direction</h3>
-							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-							<p><a href="#" class="btn btn-primary">Read more</a></p>
-						  </div>
-						</div>      
-					  </div>
-					  <div class="col-md-4 d-flex services align-self-stretch px-4 ftco-animate">
-						<div class="d-block services-wrap text-center">
-						  <div class="img" style="background-image: url(images/services-2.jpg);"></div>
-						  <div class="media-body py-4 px-3">
-							<h3 class="heading">Accomodation Services</h3>
-							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-							<p><a href="#" class="btn btn-primary">Read more</a></p>
-						  </div>
-						</div>    
-					  </div>
-					  <div class="col-md-4 d-flex services align-self-stretch px-4 ftco-animate">
-						<div class="d-block services-wrap text-center">
-						  <div class="img" style="background-image: url(images/services-3.jpg);"></div>
-						  <div class="media-body py-4 px-3">
-							<h3 class="heading">Great Experience</h3>
-							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-							<p><a href="#" class="btn btn-primary">Read more</a></p>
-						  </div>
-						</div>      
-					  </div>
+							<div class="booking-form">
+								<form>
+									<div class="form-group">
+										<div class="form-checkbox">
+											<label for="roundtrip">
+												<input type="radio" id="roundtrip" name="flight-type">
+												<span></span>Roundtrip
+											</label>
+											<label for="one-way">
+												<input type="radio" id="one-way" name="flight-type">
+												<span></span>One way
+											</label>
+											<label for="multi-city">
+												<input type="radio" id="multi-city" name="flight-type">
+												<span></span>Multi-City
+											</label>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-md-6">
+											<div class="form-group">
+												<span class="form-label">Flying from</span>
+												<input class="form-control" type="text" placeholder="City or airport">
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="form-group">
+												<span class="form-label">Flyning to</span>
+												<input class="form-control" type="text" placeholder="City or airport">
+											</div>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-md-3">
+											<div class="form-group">
+												<span class="form-label">Departing</span>
+												<input class="form-control" type="date" required>
+											</div>
+										</div>
+										<div class="col-md-3">
+											<div class="form-group">
+												<span class="form-label">Returning</span>
+												<input class="form-control" type="date" required>
+											</div>
+										</div>
+										<div class="col-md-2">
+											<div class="form-group">
+												<span class="form-label">Adults (18+)</span>
+												<select class="form-control">
+													<option>1</option>
+													<option>2</option>
+													<option>3</option>
+												</select>
+												<span class="select-arrow"></span>
+											</div>
+										</div>
+										<div class="col-md-2">
+											<div class="form-group">
+												<span class="form-label">Children (0-17)</span>
+												<select class="form-control">
+													<option>0</option>
+													<option>1</option>
+													<option>2</option>
+												</select>
+												<span class="select-arrow"></span>
+											</div>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-md-3">
+											<div class="form-group">
+												<span class="form-label">Travel class</span>
+												<select class="form-control">
+													<option>Economy class</option>
+													<option>Business class</option>
+													<option>First class</option>
+												</select>
+												<span class="select-arrow"></span>
+											</div>
+										</div>
+										<div class="col-md-3">
+											<div class="form-btn">
+												<button class="submit-btn">Show flights</button>
+											</div>
+										</div>
+									</div>
+								</form>
+							</div>
+						</div>
 					</div>
+				</div>
+				</div>
+				<div class="conteiner" >
+						<div class="wrapper">
+							<p class="resp-tabs-list">  </p>
+							<div class="cols">
+									  <div routerLink="/company-profile" class="col" ontouchstart="this.classList.toggle('hover');">
+										  <div class="container">
+											  <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
+												  <div class="inner">
+													  <p>Wizzair</p>
+										<span>Lorem ipsum</span>
+												  </div>
+											  </div>
+											  <div class="back">
+												  <div class="inner">
+													<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+												  </div>
+											  </div>
+										  </div>
+									  </div>
+			
+									  <div routerLink="/rent-a-car" class="col" ontouchstart="this.classList.toggle('hover');">
+										  <div class="container">
+											  <div class="front" style="background-image: url(https://unsplash.it/502/502/)">
+												  <div class="inner">
+													  <p>Airserbia</p>
+										<span>Lorem ipsum</span>
+												  </div>
+											  </div>
+											  <div class="back">
+												  <div class="inner">
+													  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+												  </div>
+											  </div>
+										  </div>
+									  </div>
+			
+									  <div routerLink="/rent-a-car" class="col" ontouchstart="this.classList.toggle('hover');">
+										<div class="container">
+											<div class="front" style="background-image: url(https://unsplash.it/502/502/)">
+												<div class="inner">
+													<p>Rayanair</p>
+									  <span>Lorem ipsum</span>
+												</div>
+											</div>
+											<div class="back">
+												<div class="inner">
+													<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+												</div>
+											</div>
+										</div>
+									</div>
+			
+							</div>
+						</div>
 					</div>
-				</section>
 
-	</div>
-</body>
-</html>
+		</div>
+		</body>
