--- a/clover/src/app/components/car/car.component.html
+++ b/clover/src/app/components/car/car.component.html
@@ -36,58 +36,78 @@
 			</div>	
 			
 			<div class="conteiner" >
-				<div class="wrapper">
-					<p class="resp-tabs-list"> Rent a Car Services </p>
-					<div class="cols">
-						  <div routerLink="/car/rent-a-car" class="col" ontouchstart="this.classList.toggle('hover');">
-							  <div class="container">
-								  <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
-									  <div class="inner">
-										  <p>Hertz Car Rental</p>
-							<span>Novi Sad</span>
-									  </div>
-								  </div>
-								  <div class="back">
-									  <div class="inner">
-										<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
-									  </div>
-								  </div>
-							  </div>
-						  </div>
+				<section>
+            <div class="container-fluid">
+              <div class="container">
+                <div class="row">
 
-						  <div routerLink="/car/rent-a-car" class="col" ontouchstart="this.classList.toggle('hover');">
-							  <div class="container">
-								  <div class="front" style="background-image: url(https://unsplash.it/502/502/)">
-									  <div class="inner">
-										  <p>Dollar Car Rental</p>
-							<span>Beograd</span>
-									  </div>
-								  </div>
-								  <div class="back">
-									  <div class="inner">
-										  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
-									  </div>
-								  </div>
-							  </div>
-						  </div>
+                  <div class="col-sm-4">
+                    <div class="card text-center">
+                      <div class="title">
+                        <i class="fa fa-paper-plane" aria-hidden="true"></i>
+                        <h2>Hertz Car Rental</h2>
+                      </div>
+                      <div class="price">
+                        <h4><sup>$</sup>25</h4>
+                      </div>
+                      <div class="option">
+                        <ul>
+                        <li> <i class="fa fa-check" aria-hidden="true"></i> 10 GB Space </li>
+                        <li> <i class="fa fa-check" aria-hidden="true"></i> 3 Domain Names </li>
+                        <li> <i class="fa fa-check" aria-hidden="true"></i> 20 Email Address </li>
+                        <li> <i class="fa fa-times" aria-hidden="true"></i> Live Support </li>
+                        </ul>
+                      </div>
+                      <a href="#">Order Now </a>
+                    </div>
+                  </div>
 
-						  <div routerLink="/car/rent-a-car" class="col" ontouchstart="this.classList.toggle('hover');">
-							<div class="container">
-								<div class="front" style="background-image: url(https://unsplash.it/502/502/)">
-									<div class="inner">
-										<p>Avis Car Rental</p>
-						  <span>Niš</span>
-									</div>
-								</div>
-								<div class="back">
-									<div class="inner">
-										<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-				</div>
-			</div>
+                  <div class="col-sm-4">
+                    <div class="card text-center">
+                      <div class="title">
+                        <i class="fa fa-plane" aria-hidden="true"></i>
+                        <h2>Dollar Car Rental</h2>
+                      </div>
+                      <div class="price">
+                        <h4><sup>$</sup>50</h4>
+                      </div>
+                      <div class="option">
+                        <ul>
+                        <li> <i class="fa fa-check" aria-hidden="true"></i> 50 GB Space </li>
+                        <li> <i class="fa fa-check" aria-hidden="true"></i> 5 Domain Names </li>
+                        <li> <i class="fa fa-check" aria-hidden="true"></i> Unlimited Email Address </li>
+                        <li> <i class="fa fa-times" aria-hidden="true"></i> Live Support </li>
+                        </ul>
+                      </div>
+                      <a href="#">Order Now </a>
+                    </div>
+                  </div>
+
+                  <div class="col-sm-4">
+                    <div class="card text-center">
+                      <div class="title">
+                        <i class="fa fa-rocket" aria-hidden="true"></i>
+                        <h2>Avis Car Rental</h2>
+                      </div>
+                      <div class="price">
+                        <h4><sup>$</sup>100</h4>
+                      </div>
+                      <div class="option">
+                        <ul>
+                        <li> <i class="fa fa-check" aria-hidden="true"></i> Unlimited GB Space </li>
+                        <li> <i class="fa fa-check" aria-hidden="true"></i> 30 Domain Names </li>
+                        <li> <i class="fa fa-check" aria-hidden="true"></i> Unlimited Email Address </li>
+                        <li> <i class="fa fa-check" aria-hidden="true"></i> Live Support </li>
+                        </ul>
+                      </div>
+                      <a href="#">Order Now </a>
+                    </div>
+                  </div>
+                 
+                </div>
+              </div>
+            </div>
+          </section>
 		</div>
 	</div>
 </body>
