--- a/clover/src/app/components/car/rent-a-car/rent-a-car.component.css
+++ b/clover/src/app/components/car/rent-a-car/rent-a-car.component.css
@@ -21,7 +21,7 @@ body, html {
   .conteiner{
     margin-left: 32%;
     margin-right: 7%;
-    margin-top: 3%;
+    margin-top: 150px;
     height: 80%;
     padding: 20px;
     background: #fff;
@@ -42,7 +42,7 @@ body, html {
     display: inline-block;
 }
 .param dt {
-    margin: 0;
+    margin-top: 0;
     margin-right: 7px;
     font-weight: 600;
 }
@@ -76,3 +76,147 @@ var {
     object-fit: cover;
 }
   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+body {
+   background-color: lighten(#398B93, 30%);
+   box-sizing: border-box; 
+}
+
+.header {
+   background-color: darken(#398B93, 5%);
+   color: white;
+   font-size: 1.5em;
+   padding: 1rem;
+   text-align: center;
+   text-transform: uppercase;
+}
+
+img {
+   border-radius: 50%;
+   height: 60px;
+   width: 60px;
+}
+
+.table-users {
+   border: 1px solid darken(#398B93, 5%);
+   border-radius: 10px;
+   box-shadow: 3px 3px 0 rgba(0,0,0,0.1);
+   max-width: calc(100% - 2em);
+   margin: 1em auto;
+   overflow: hidden;
+   width: 800px;
+}
+
+table {
+   width: 100%;
+}
+
+   
+   td {
+      text-align: center;
+      vertical-align: middle;
+      color: darken(#398B93, 10%);
+      padding: 10px;
+      
+   }
+   
+   th { 
+      background-color: lighten(#398B93, 50%);
+      font-weight: 300;
+      color: darken(#398B93, 10%);
+      padding: 10px; 
+   }
+   
+  
+
+
+@media screen and (max-width: 700px) {   
+   table, tr, td { display: block; }
+   
+   td {
+      
+         position: absolute;
+         top: 50%;
+         transform: translateY(-50%);
+         width: 100px;
+      }
+
+    }
+   
+   tr {
+      padding: 10px 0;
+      position: relative;
+      
+   }
+
+
+@media screen and (max-width: 500px) {
+   .header {
+      background-color: transparent;
+      color: lighten(#398B93, 60%);
+      font-size: 2em;
+      font-weight: 700;
+      padding: 0;
+      text-shadow: 2px 2px 0 rgba(0,0,0,0.1);
+   }
+   
+   img {
+      border: 3px solid;
+      border-color: lighten(#398B93, 50%);
+      height: 100px;
+      margin: 0.5rem 0;
+      width: 100px;
+   }
+   
+   td {
+       
+         background-color: lighten(#398B93, 45%); 
+         border-bottom: 1px solid lighten(#398B93, 30%);
+         border-radius: 10px 10px 0 0;
+         position: relative;   
+         top: 0;
+         transform: translateY(0);
+         width: 100%;
+      }
+      
+     
+   
+   tr {
+      background-color: white !important;
+      border: 1px solid lighten(#398B93, 20%);
+      border-radius: 10px;
+      box-shadow: 2px 2px 0 rgba(0,0,0,0.1);
+      margin: 0.5rem 0;
+      padding: 0;
+   }
+   
+   .table-users { 
+      border: none; 
+      box-shadow: none;
+      overflow: visible;
+   }
+}
