--- a/clover/src/app/components/car/rent-a-car/rent-a-car.component.html
+++ b/clover/src/app/components/car/rent-a-car/rent-a-car.component.html
@@ -1,6 +1,31 @@
 <body>
 	<div class="bg">
-        <div class="container">
+        <div class="table-users">
+            <div class="header">Users</div>
+            
+            <table cellspacing="0">
+               <tr>
+                  <th>Picture</th>
+                  <th>Name</th>
+                  <th>Email</th>
+                  <th>Phone</th>
+                  <th width="230">Comments</th>
+               </tr>
+         
+               <tr *ngFor="let car of allCars">
+                <td>{{car.brand}}</td>
+                <td>{{car.model}}</td>
+                <td>{{car.year}}</td>
+                <td>{{car.pricePerDay}}$</td>
+               </tr>
+            </table>
+         </div>
+
+
+
+
+
+        <!--<div class="container">
             <div class="card">
                 <table class="table table-hover shopping-cart-wrap">
                     <thead class="text-muted">
@@ -77,7 +102,7 @@
                                 <div class="price-wrap"> 
                                     <var class="price">USD 35</var> 
                                     <small class="text-muted">(USD10 each)</small> 
-                                </div> <!-- price-wrap .// -->
+                                </div>
                             </td>
                             <td class="text-right"> 
                                 <a title="" href="" class="btn btn-outline-success" data-toggle="tooltip" data-original-title="Save to Wishlist"> <i class="fa fa-heart"></i></a> 
@@ -87,6 +112,10 @@
                     </tbody>
                 </table>
             </div>
-        </div> 
+        </div> -->
+
+        
+
+
     </div>
 </body>
